@@ -1,3 +1,7 @@
+2003-01-15  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_datums.c: added some datums as suggested by the GRASS team.
+
 2002-12-14  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/projects.h, various others: updated header style in some files.
